# ham-fax

./: .gitignore  AUTHORS  CHANGELOG  ChangeLog  Config.cpp  Config.hpp  CorrectDialog.cpp  CorrectDialog.hpp  DisplayLevel.cpp  DisplayLevel.hpp  Error.cpp  Error.hpp  FaxControl.cpp  FaxControl.hpp  FaxDemodulator.cpp  FaxDemodulator.hpp  FaxImage.cpp  FaxImage.hpp  FaxModulator.cpp  FaxModulator.hpp  FaxReceiver.cpp  FaxReceiver.hpp  FaxTransmitter.cpp  FaxTransmitter.hpp  FaxView.cpp  FaxView.hpp  FaxWindow.cpp  FaxWindow.hpp  File.cpp  File.hpp  FirFilter.hpp  HamFax.html  HelpDialog.cpp  HelpDialog.hpp  LookUpTable.hpp  Makefile  Makefile.am  Makefile.in  NEWS  OptionsDialog.cpp  (+24 more)
data/: hamfax.desktop
doc/: HamFax.html  Makefile.in  doxygen.cfg  hamfax.1  hamfax.dia  hamfax.html  hamfax.xml
doxygen/: hamfax.cfg
etc/: hamfaxrc
include/: log.h
lib/: log.c
po/: Makefile.in  hamfax.pro  hamfax_de.po  hamfax_de.ts  hamfax_fr.ts
src/: Config.cpp  Config.hpp  CorrectDialog.cpp  CorrectDialog.hpp  DeviceInterface.cpp  DeviceInterface.hpp  DisplayLevel.cpp  DisplayLevel.hpp  Error.cpp  Error.hpp  FaxDemodulator.cpp  FaxDemodulator.hpp  FaxImage.cpp  FaxImage.hpp  FaxModulator.cpp  FaxModulator.hpp  FaxReceiver.cpp  FaxReceiver.hpp  FaxTransmitter.cpp  FaxTransmitter.hpp  FaxWindow.cpp  FaxWindow.hpp  File.cpp  File.hpp  FirFilter.hpp  HelpDialog.cpp  HelpDialog.hpp  ImageWidget.cpp  ImageWidget.hpp  InDevice.hpp  LookUpTable.hpp  Makefile.in  Modulator.hpp  OptionsDialog.cpp  OptionsDialog.hpp  OutDevice.hpp  PTC.cpp  PTC.hpp  PTT.cpp  PTT.hpp  (+11 more)
