dnl Process this file with autoconf to produce a configure script.
AC_INIT(hamfax.cpp)
AC_LANG_CPLUSPLUS

dnl Checks for programs.
AC_PROG_CXX
AC_PROG_INSTALL

dnl Checks for libraries.
AC_CHECK_LIB(audiofile,afOpenFile)
BNV_HAVE_QT

dnl Checks for header files.
AC_CHECK_HEADER(getopt.h)
AC_CHECK_HEADER(sys/soundcard.h)

dnl Checks for typedefs, structures, and compiler characteristics.

dnl Checks for library functions.

AC_OUTPUT(Makefile)
