dnl HamFax -- an application for sending and receiving amateur radio facsimiles
dnl Copyright (C) 2001 Christof Schmitt, DH1CS <christof.schmitt@gmx.de>
dnl  
dnl This program is free software; you can redistribute it and/or
dnl modify it under the terms of the GNU General Public License
dnl as published by the Free Software Foundation; either version 2
dnl of the License, or (at your option) any later version.
dnl
dnl This program is distributed in the hope that it will be useful,
dnl but WITHOUT ANY WARRANTY; without even the implied warranty of
dnl MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
dnl GNU General Public License for more details.
dnl  
dnl You should have received a copy of the GNU General Public License
dnl along with this program; if not, write to the Free Software
dnl Foundation, Inc., 59 Temple Place - Suite 330, Boston, MA  02111-1307, USA.
dnl
dnl Process this file with autoconf to produce a configure script.
AC_INIT(hamfax.cpp)
AC_LANG_CPLUSPLUS
AC_PROG_CXX
AC_PROG_INSTALL
AC_CHECK_LIB(audiofile,afOpenFile)
BNV_HAVE_QT
AC_CHECK_HEADER(sys/soundcard.h)
AC_OUTPUT(Makefile)
